# devbot101

./: .env.example  .gitignore  Dockerfile  PLAN_NEW_PROJECT.md  alembic.ini  app.py  docker-compose.yml  entrypoint.sh  pyproject.toml  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_audit_log.py
bot/: claude_runner.py  config.py  guardrail.py  handlers.py  main.py  session_store.py  slack_updater.py  storage.py
sandbox/: CLAUDE.md
tests/: conftest.py  test_claude_runner.py  test_guardrail.py  test_handlers.py
